[package]
name = "omg"
version = "0.2.0"
edition = "2021"
description = "CLI app for interacting with the omg.lol API"
homepage = "https://github.com/supleed2/omg-rs"
license = "Apache-2.0"
repository = "https://github.com/supleed2/omg-rs"
# documentation = ""
# keywords = []
# categories = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
clap = { version = "4.2.2", features = ["derive"] }
directories = "5.0.0"
omg-api = "0.1.0"
reqwest = { version = "0.11.16", features = ["blocking", "json"] }
serde = { version = "1.0.160", features = ["derive"] }
toml = "0.7.3"

[patch.crates-io]
omg-api = { path = "omg-api" }
