[package]
name = "omg"
version = "0.2.0"
edition = "2021"
description = "CLI app for interacting with the omg.lol API"
homepage = "https://github.com/supleed2/omg-rs"
repository = "https://github.com/supleed2/omg-rs"
license = "Apache-2.0"
# keywords = []
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.1", features = ["derive"] }
dialoguer = { version = "0.10.4", default-features = false, features = ["password"] }
directories = "5.0.1"
omg-api = "0.2.0"
reqwest = { version = "0.11.20", features = ["blocking"] }
serde = { version = "1.0.188", features = ["derive"] }
toml = "0.7.6"

[patch.crates-io]
omg-api = { path = "omg-api" }
